Day-5 Even Odd | Divisible Number

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <!-- <script src="/swap/swap.js"></script> -->
     <!-- <script src="/LargestNum/LargestNum.js"></script> -->
     <!-- <script src="/PositiveNegativeCheck/PostiveNeg.js"></script> -->
+    <!-- <script src="/Marks/Marks.js"></script> -->
+    <script src="/EvenOdd&Divisibility/EnenOdd&Divisiblity.js"></script>
 </body>
 
 </html>
