--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <!-- <script src="/LargestNum/LargestNum.js"></script> -->
     <!-- <script src="/PositiveNegativeCheck/PostiveNeg.js"></script> -->
     <!-- <script src="/Marks/Marks.js"></script> -->
-    <script src="/EvenOdd&Divisibility/EnenOdd&Divisiblity.js"></script>
+    <!-- <script src="/EvenOdd&Divisibility/EnenOdd&Divisiblity.js"></script> -->
+    <!-- <script src="/LeapYear/LeapYear.js"></script> -->
 </body>
 
 </html>
