Day-7 SquareRoot CubeRoot Power

--- a/index.html
+++ b/index.html
@@ -9,6 +9,37 @@
 
 <body>
     <h1>Welcome the The Daily Task Portal</h1>
+
+    <h4>To run the python program: <br>
+        python filename.py
+        <br> <br>
+
+        to run the Js program: <br>
+        node filename.js <br> <br>
+
+        to run the c/cpp program <br>
+
+        navigate the folder like: cd E:/DailyTasks/MathProg <br>
+
+        gcc -o filename filename.c <br>
+        ./filename <br> <br>
+
+        for C# <br>
+        cd path/to/your/directory <br>
+        create new project: dotnet new console -o MyCSharpApp <br>
+        navgiate to the project: cd MyCSharpApp <br>
+        build project : dotnet build <br>
+        run : dotnet run <br> <br>
+
+
+        or <br>
+        navigate to the directory: <br>
+        then run the command: <br>
+
+        dotnet script filename.cs
+        <br>
+    </h4>
+
     <!-- <script src="/swap/swap.js"></script> -->
     <!-- <script src="/LargestNum/LargestNum.js"></script> -->
     <!-- <script src="/PositiveNegativeCheck/PostiveNeg.js"></script> -->
