Day-8 Table | Even-Odd-Numbers

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
         gcc -o filename filename.c <br>
         ./filename <br> <br>
 
+        or
+        <br>
+        gcc filename.c <br>
+        ./a.exe
+
         for C# <br>
         cd path/to/your/directory <br>
         create new project: dotnet new console -o MyCSharpApp <br>
